--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="nav_expenditure">Expenditure Page</string>
     <string name="nav_earnings">Earnings Page</string>
+    <string name="fragment_summary">Summary</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragment_about">About Page</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 
 </resources>
