--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="nav_earnings">Earnings Page</string>
     <string name="fragment_summary">Summary</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="fragment_about">About Page</string>
+    <string name="fragment_about">This appliation is developed by the team of 3 students from Sheridan as the requirement of the course.\n\nThe app is to track the dollar earned and spent by the user. The application also provides an analysis to help users to estimate their expense and to save the earnings.\n\n\n Application Name: ExpenseTracker\n Group No: 07\n Group Members:\n   Binod Shrestha(991462138\n   Hemraj Kafle(99146...)\n   Saam Haghighat(99146...)\n School: Sheridan College \n Course: PROG39402</string>
     <string name="open">open</string>
     <string name="close">close</string>
 
